results/SVCOMP/4-shot/log-exceptions4-2024_03_18_15_57_16.txt
class A extends Throwable {}

class B extends A {}

class C extends B {}

public class exceptions4 {
  //@ requires true;
  //@ ensures \result == null;
  public static void main(String[] args) {
    try {
      B b = new B();
      throw b;
    } catch (C exc) {
      System.out.println("C");
      assert false;
    } catch (B exc) {
      System.out.println("B");
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions4.java:9: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == null;
               ^
1 error

